--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -1443,7 +1443,7 @@ msgstr ""
 
 #: myauth/models.py:119 utils/cron.py:53 utils/cron.py:131
 msgid "vendedorinternacional.net"
-msgstr "maquinadevendasusa.com"
+msgstr "redirecionamento.maquinadevendasusa.com"
 
 #: myauth/models.py:130
 msgid "País"
