--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-02 15:18-0200\n"
+"POT-Creation-Date: 2017-11-02 16:03-0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -172,7 +172,8 @@ msgid ""
 "Este valor poderá ser alterado após inclusão dos serviços necessários para o "
 "preparo."
 msgstr ""
-"The total amount due may suffer changes due to services used to prep your shipment."
+"The total amount due may suffer changes due to services used to prep your "
+"shipment."
 
 #: html/templates/base_shipment_details.html:129
 #: html/templates/base_shipment_list.html:50
@@ -605,8 +606,8 @@ msgstr "Copyright &copy; PrepShip Tool 2017"
 #: html/templates/user_registration.html:468
 #: html/templates/user_reset_password.html:117
 #: html/templates/user_validation.html:96
-msgid "<a href='/termos-e-condicoes-de-uso.html'>Termos e Condições de Uso"
-msgstr "<a href='/terms-and-conditions.html'>Terms and Conditions"
+msgid "<a href='/pt/termos-e-condicoes-de-uso.html'>Termos e Condições de Uso"
+msgstr "<a href='/en/terms-and-conditions.html'>Terms and Conditions"
 
 #: html/templates/includes/layout-footer.html:204
 #: html/templates/includes/layout.html:275 html/templates/login.html:89
@@ -635,11 +636,11 @@ msgstr "Important!"
 #: html/templates/includes/layout.html:346
 msgid ""
 "Os termos e condições de uso da nossa plataforma foram atualizados. <a "
-"href='/termos-e-condicoes-de-uso.html' class='download' "
+"href='/pt/termos-e-condicoes-de-uso.html' class='download' "
 "target='_blank'>Confira clicando aqui</a>. Duas informações importantes para "
 "você."
 msgstr ""
-"Our terms and conditions have been updated. <a href='/terms-and-conditions."
+"Our terms and conditions have been updated. <a href='/en/terms-and-conditions."
 "html' class='download' target='_blank'>Click here</a> to read it. We have "
 "two important info for you."
 
@@ -1339,10 +1340,10 @@ msgstr "Menu"
 
 #: html/templates/user_registration.html:67
 msgid ""
-"Leia <a href='/termos-e-condicoes-de-uso.html' class='download'>aqui</a> "
+"Leia <a href='/pt/termos-e-condicoes-de-uso.html' class='download'>aqui</a> "
 "nossos termos e condições de uso da plataforma."
 msgstr ""
-"Read <a href='/terms-and-conditions.html' class='download'>here</a> our "
+"Read <a href='/en/terms-and-conditions.html' class='download'>here</a> our "
 "terms and conditions."
 
 #: html/templates/user_registration.html:69
