ajuste do no-reply, testes de email

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -2588,7 +2588,7 @@ msgstr "to access our terms and conditions."
 
 #: utils/helper.py:151
 msgid "<no-reply@vendedorinternacional.net>"
-msgstr "<no-reply@prepshiptool.com>"
+msgstr "<no-reply@fbainspection.com>"
 
 #: utils/helper.py:253
 msgid "Adicionar"
