--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -2456,7 +2456,7 @@ msgstr ""
 
 #: utils/models.py:18
 msgid "Valor Fábio/Gustavo/Roberto"
-msgstr ""
+msgstr "Valor Fábio/Roberto"
 
 #: utils/models.py:19
 msgid "Valor Extra da Versão em Inglês"
