informações nos detalhes
adição de filtro para trazer somente usuários que fizeram compras.
adição do filtro por grupo na lista de usuários.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1555,7 +1555,7 @@ msgstr "Registration"
 msgid ""
 "Faça seu cadastro para entrar em nossa fila de espera de assinantes. Assim "
 "que sua vaga for liberada, você será notificado."
-msgstr ""
+msgstr "Make your registration to enter in our list of subscribers."
 
 #: html/templates/user_registration.html:69
 msgid "54,90"
