--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -961,7 +961,7 @@ msgstr ""
 #: html/templates/product_add_edit.html:51 html/templates/product_stock.html:14
 #: product/views.py:134
 msgid "Estoque FBA"
-msgstr "FBA Inventory"
+msgstr "Inventory"
 
 #: html/templates/includes/layout.html:281
 #: html/templates/product_add_edit.html:42
