--- a/locale/pt/LC_MESSAGES/django.po
+++ b/locale/pt/LC_MESSAGES/django.po
@@ -1052,7 +1052,7 @@ msgid "Veja abaixo nosso endereço:"
 msgstr ""
 
 #: html/templates/includes/layout.html:539
-msgid "1 Lafayette Rd - Building 1, Door D, Hampton, New Hampshire, 03842"
+msgid "1 Lafayette Rd - Building 1, Door E (Loading Dock), Hampton, New Hampshire, 03842"
 msgstr ""
 
 #: html/templates/includes/layout.html:540
@@ -3936,7 +3936,7 @@ msgid ""
 msgstr ""
 
 #: store/views.py:384
-msgid "1 Lafayette Rd - Building 1, Door D"
+msgid "1 Lafayette Rd - Building 1, Door E (Loading Dock)"
 msgstr ""
 
 #: store/views.py:385
