liberação dos lotes para o público em geral, após as primeiras 24 horas, por tempo indeterminado.

--- a/locale/en/LC_MESSAGES/djangojs.po
+++ b/locale/en/LC_MESSAGES/djangojs.po
@@ -399,4 +399,4 @@ msgstr ""
 #: html/static/js/applications.js:1467 html/static/js/applications.js:1473
 #: html/static/js/applications.js:1478
 msgid "EXPIRED"
-msgstr ""
+msgstr "PUBLIC"
