--- a/locale/pt/LC_MESSAGES/djangojs.po
+++ b/locale/pt/LC_MESSAGES/djangojs.po
@@ -408,7 +408,7 @@ msgstr "loja/lote/detalhes"
 #: html/static/js/applications.js:1467 html/static/js/applications.js:1473
 #: html/static/js/applications.js:1478
 msgid "EXPIRED"
-msgstr "EXPIRADO"
+msgstr "PÚBLICO"
 
 #~ msgid "Unable to save, fix errors above to continue."
 #~ msgstr ""
